Ajusando icone da Apple

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </button>
             
             <button type="button" class="icons_button">
-                <img src="./img/apple-icon.png" alt="apple">
+                <img src="img/appel-icon.png" alt="apple">
             </button>
     
             </div>
